# hacs-integration-pd

./: .gitignore  .gitlab-ci.yml  INTAKE.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-hacs-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-integration-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-realtime-push/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-custom-lovelace-card/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UI-SPEC.md  04-VALIDATION.md
custom_components/party_dispenser/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  websocket.py
custom_components/party_dispenser/frontend/: __init__.py  party-dispenser-card.js  party-dispenser-card.js.map
custom_components/party_dispenser/translations/: en.json
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_frontend_register.py  test_hacs_manifest.py  test_import.py  test_info_md.py  test_integration_manifest.py  test_sensor.py  test_services.py  test_websocket.py
tests/fixtures/: queue.json  recipes.json
(+31 files in other folders)
