[project]
name = "party_dispenser"
version = "0.2.0"
description = "Home Assistant integration and Lovelace card for the Party Dispenser backend."
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "pytest-homeassistant-custom-component==0.13.316",
  "ruff==0.15.11",
]

[tool.setuptools.packages.find]
# Restrict editable-install discovery to the integration package only; `www/` and
# `tests/` are intentionally excluded (www is the Phase 4 card workspace, tests is
# a test harness not a Python package).
where = ["."]
include = ["custom_components*"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  "tests/fixtures",
  "www",
]

[tool.ruff.lint]
# Start from HA Core's ruleset (adapted from https://github.com/home-assistant/core/blob/dev/pyproject.toml)
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "ASYNC",  # flake8-async
  "S",      # flake8-bandit (security)
  "SIM",    # flake8-simplify
  "T20",    # flake8-print
  "RUF",    # ruff-specific
]
ignore = [
  "D203",   # no-blank-line-before-class (conflicts with formatter)
  "D212",   # multi-line-summary-first-line (conflicts with formatter)
  "COM812", # incompatible with formatter
  "ISC001", # incompatible with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
"custom_components/party_dispenser/__init__.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
